Fix viewing FAQ letters if a snowflake pass behind them

--- a/src/styles/main.2017w.scss
+++ b/src/styles/main.2017w.scss
@@ -40,6 +40,10 @@ canvas {
     left: 0px;
 }
 
+.intro {
+    height: 100vh;
+}
+
 .head-logo img {
     @include center-block();
     width: 55%;
